<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkblue">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/dancing_script"
        android:text="@string/signup_portal"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="60sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="160dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/canteen_logo"
        android:src="@drawable/chef" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/creamwhite"
        android:background="@drawable/cardview"
        android:orientation="vertical">

        <TextView
            android:id="@+id/credentialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/dancing_script"
            android:text="@string/please_enter_your_credentials"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/phoneNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cardview"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_phone_24"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cardview"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="text"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_person_outline_24"/>

        <EditText
            android:id="@+id/batchEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cardview"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_the_batch_year"
            android:inputType="text"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_access_time_24"/>

        <EditText
            android:id="@+id/facultyEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cardview"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/enter_your_faculty"
            android:inputType="text"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_class_24"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cardview"
            android:ems="10"
            android:hint="@string/email_provided_by_college"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:layout_gravity="center"
            android:drawableStart="@drawable/baseline_lock_outline_24"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/cardview"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_lock_outline_24"/>


        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/signup"
            android:backgroundTint="@color/green"/>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_a_user_login"
            android:textColor="@color/purple"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:textAlignment="center"/>

    </LinearLayout>
</RelativeLayout>

</ScrollView>