<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primaryBlackHex">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_admin"
        android:textStyle="bold"
        android:textSize="60sp"
        android:fontFamily="@font/dancing_script"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       android:layout_marginTop="110dp"
        android:orientation="vertical"
        android:layout_marginBottom="500dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/admin_image"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageButton"
            android:layout_margin="10dp"
            android:ems="10"
            android:fontFamily="@font/aladin"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:orientation="vertical">


        <ImageButton
            android:id="@+id/menuImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/menu_edit_button"
            android:src="@drawable/menu"
            android:visibility="visible" />

        <TextView
            android:id="@+id/menuEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/menuImageButton"
            android:ems="10"
            android:fontFamily="@font/aladin"
            android:padding="10dp"
            android:text="@string/click_image_to_edit_menu"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/customerImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/menuEditText"
            android:contentDescription="@string/customer_operation_button"
            android:src="@drawable/placeholder"
            />

        <TextView
            android:id="@+id/customerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerImageButton"
            android:ems="10"
            android:fontFamily="@font/aladin"
            android:padding="10dp"
            android:text="Click Image To View Customer"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:layout_marginBottom="80dp"/>


    </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1050dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            android:background="@drawable/cardview">

            <TextView
                android:id="@+id/functionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_functions"
                android:textStyle="bold"
                android:textSize="60sp"
                android:fontFamily="@font/dancing_script"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:layout_marginTop="1dp"
                android:layout_marginBottom="10dp"
                />



            <Button
                android:id="@+id/menuLookupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_lookup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="80dp"
                />

            <Button
                android:id="@+id/orderLookupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_lookup"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="150dp"
                android:layout_marginBottom="80dp"
                />

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:backgroundTint="@color/red"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                />

        </RelativeLayout>



    </RelativeLayout>
</ScrollView>