<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/darkblue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/dancing_script"
        android:text="@string/happy_canteen"
        android:layout_marginTop="10dp"
        android:textColor="@color/yellow"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/userTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/dancing_script"
        android:text="@string/welcome_admin"
        android:textAlignment="center"
        android:layout_below="@+id/titleTextView"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/cardview">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/chef" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/logoImageView"
            android:background="@drawable/cardview"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:drawableStart="@drawable/account_circle"
            />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/cardview"
            android:ems="10"
            android:hint="@string/enter_your_user_id"
            android:inputType="textEmailAddress"
            android:layout_below="@id/nameEditText"
            android:padding="5dp"
            android:drawableStart="@drawable/baseline_email_24"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/emailEditText"
            android:background="@drawable/cardview"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:drawableStart="@drawable/password"/>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/login"

            android:layout_below="@+id/passwordEditText"
            android:layout_centerHorizontal="true"/>

       <!-- <Button
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/signup"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            android:layout_below="@+id/loginButton"
            android:layout_centerHorizontal="true"/>-->



    </RelativeLayout>

    </RelativeLayout>

</ScrollView>
